# Roomz

./: .coverage  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 934cd24cd9b0_initial_tracks_playlist_playback_state.py  a1b2c3d4e5f6_library_roots_and_track_root.py
app/: __init__.py  audio_utils.py  clock_sync.py  config.py  crud.py  db.py  logging_config.py  main.py  models.py  player.py  schemas.py  ws_manager.py
app/routers/: api.py
data/: app.db
frontend/: app.js  index.html  style.css
frontend/static/: _reset.css  app.js  base.css  colors.css  components.css  layout.css
tests/: conftest.py  test_api.py  test_app.py  test_clock_sync.py  test_crud.py  test_music.py  test_player.py  test_sync_tick_broadcast.py  test_websocket.py
